--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -22,13 +27,32 @@ img {
     border-radius: 16px;
 }
 
+main {
+  padding: 24px;
+}
+
+section + section {
+  padding: 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
+
 h1 {
   line-height: 140%;
   font-size: 40px;
   color: #291b1a ;
+  margin-bottom: 4px ;
+  line-height: 150%;
 }
 
 h2 {
   font-size: 24px;
   color: #291b1a ;
+  margin-bottom: 4px ;
+  line-height: 150%;
 }
+ ul {
+  padding-left: 25px;
+ }
